--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -19,15 +19,27 @@
     "\n",
     "### $1.1 \\; \\text{Goal}$\n",
     "\n",
-    "$ \\text{The objective is to build and compare two factor-based long short allocation models with constraints on their betas.} $ \n",
     "\n",
-    "$ \\text{The first strategy considers a target Beta in the interval} \\; [-0.5, 0.5] \\; \\text{while the second has one in the interval} \\; [-2, +2] $.\n",
+    "$ \\text{The objective is to build and compare two factor-based long short allocation models}\n",
+    "\\\\\n",
+    "\\text{with constraints on their betas.} $\n",
     "\n",
-    "$ \\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization); the second incorporates an Information Ratio.} $\n",
     "\n",
-    "$ \\text{Post optimization, I compare the model outcomes while evaluating their sensitivity to estimator length for the covariance matrix}\n",
+    "$ \\text{The first strategy considers a target Beta in the interval} \\; [-0.5, 0.5] \\;\n",
+    "\\\\ \n",
+    "\\text{while the second has one in the interval} \\; [-2, +2] $.\n",
+    "\n",
+    "\n",
+    "$ \\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);} \n",
+    "\\\\\n",
+    "\\text{the second incorporates an Information Ratio.} $\n",
+    "\n",
+    "$ \\text{Post optimization, I compare the model outcomes while evaluating their sensitivity} \n",
+    "\\\\\n",
+    "\\text{to estimator length for the covariance matrix}\n",
     "\\\\\n",
     "\\text{and expected returns across market regimes}. $\n",
+    "\n",
     "\n",
     "### $1.2 \\; \\text{Reallocation}$\n",
     "\n",
