--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -36,9 +36,9 @@
     "\n",
     "$ \\text{Post optimization, I compare the model outcomes while evaluating their sensitivity} \n",
     "\\\\\n",
-    "\\text{to estimator length for the covariance matrix}\n",
-    "\\\\\n",
-    "\\text{and expected returns across market regimes}. $\n",
+    "\\text{to estimator length for the covariance matrix} $\n",
+    "\n",
+    "$ \\text{and expected returns across market regimes}. $\n",
     "\n",
     "\n",
     "### $1.2 \\; \\text{Reallocation}$\n",
