--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -30,8 +30,7 @@
     "\n",
     "\n",
     "$ \\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);} \n",
-    "\\\\\n",
-    "\\text{the second incorporates an Information Ratio}. $\n",
+    "\\\\ \\text{the second incorporates an Information Ratio}. $\n",
     "\n",
     "$ \\text{Post optimization, I compare the model outcomes while evaluating their sensitivity} \n",
     "\\\\\n",
