--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -29,8 +29,9 @@
     "\\text{while the second has one in the interval} \\; [-2, +2]. $\n",
     "\n",
     "\n",
-    "$ \\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);} \n",
-    "\\\\ \\text{the second incorporates an Information Ratio}. $\n",
+    "$ \\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);}$ \n",
+    "\n",
+    "$ \\text{the second incorporates an Information Ratio}. $\n",
     "\n",
     "$ \\text{Post optimization, I compare the model outcomes while evaluating their sensitivity} \n",
     "\\\\\n",
