--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -20,8 +20,8 @@
     "### $1.1 \\; \\text{Goal}$\n",
     "\n",
     "\n",
-    "$ \\text{The objective is to build and compare two factor-based long short allocation models}\n",
-    "\\\\ \\text{with constraints on their betas}. $\n",
+    "$ \\text{The objective is to build and compare two factor-based long short allocation models} $\n",
+    "$ \\text{with constraints on their betas}. $\n",
     "\n",
     "\n",
     "$ \\text{The first strategy considers a target Beta in the interval} \\; [-0.5, 0.5] \\;\n",
