--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -50,9 +50,11 @@
     "\n",
     "$ \\text{The data is publicly available}. $\n",
     "\n",
-    "### 1.3 Performance Evaluation\n",
+    "### $1.3 \\; \\text{Performance Evaluation}$\n",
     "\n",
-    "The performance / risk profiles are sensitive to the target Beta and the market environment.\n",
+    "$ \\text{The performance / risk profiles are sensitive} $\n",
+    "\n",
+    "$ \\text{to the target Beta and the market environment} . $\n",
     "\n",
     "A low Beta indicates decorrelation; a high Beta is the antithesis.\n",
     "\n",
