--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -56,7 +56,9 @@
     "\n",
     "$ \\text{to the target Beta and the market environment} . $\n",
     "\n",
-    "A low Beta indicates decorrelation; a high Beta is the antithesis.\n",
+    "$ \\text{A low Beta indicates decorrelation;} $ \n",
+    "\n",
+    "$ \\text{a high Beta is the antithesis.} $\n",
     "\n",
     "Portfolio Characteristics Definition:\n",
     "- $\\text{Return} : \\mu$\n",
