--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -60,7 +60,10 @@
     "\n",
     "$ \\text{a high Beta is the antithesis.} $\n",
     "\n",
-    "Portfolio Characteristics Definition:\n",
+    "<br>\n",
+    "\n",
+    "$ \\text{Portfolio Characteristics Definition:} $\n",
+    "\n",
     "- $\\text{Return} : \\mu$\n",
     "\n",
     "- $\\text{Vol} : \\sigma$\n",
