--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -15,9 +15,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $1 \\; \\; \\text{Overview}$\n",
+    "## $ 1 \\; \\; \\text{Overview} $\n",
     "\n",
-    "### $1.1 \\; \\text{Goal}$\n",
+    "### $ 1.1 \\; \\text{Goal} $\n",
     "\n",
     "\n",
     "$ \\text{The objective is to build and compare two factor-based long short allocation models} $\n",
@@ -40,7 +40,7 @@
     "$ \\text{and expected returns across market regimes}. $\n",
     "\n",
     "\n",
-    "### $1.2 \\; \\text{Reallocation}$\n",
+    "### $ 1.2 \\; \\text{Reallocation} $\n",
     "\n",
     "$ \\text{The portfolios are reallocated weekly from} \\, \\texttt{`03-01-2007`} \\, \\text{to} \\, \\text{`03-31-2024`}. $ \n",
     "\n",
@@ -50,7 +50,7 @@
     "\n",
     "$ \\text{The data is publicly available}. $\n",
     "\n",
-    "### $1.3 \\; \\text{Performance Evaluation}$\n",
+    "### $ 1.3 \\; \\text{Performance Evaluation} $\n",
     "\n",
     "$ \\text{The performance / risk profiles are sensitive} $\n",
     "\n",
@@ -74,7 +74,7 @@
     "\n",
     "- $\\text{Sharpe} : \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$\n",
     "\n",
-    "### 1.4 Simplification\n",
+    "### $ 1.4 \\; \\text{Simplification} $\n",
     "\n",
     "Post Factor Model (FM) construction, I use trend following estimators for $\\bf{\\mu}$. \n",
     "\n",
