--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -76,7 +76,9 @@
     "\n",
     "### $ 1.4 \\; \\text{Simplification} $\n",
     "\n",
-    "Post Factor Model (FM) construction, I use trend following estimators for $\\bf{\\mu}$. \n",
+    "$ \\text{Post Factor Model (FM) construction,} $\n",
+    "\n",
+    "$ \\text{I use trend following estimators for} \\, \\bf{\\mu} .$ \n",
     "\n",
     "The estimator quality depends on the look-back (LB) period; $\\therefore$\n",
     "- $\\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}.$\n",
