--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -82,7 +82,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "The estimator quality depends on the look-back (LB) period; $\\therefore$\n",
+    "$ \\text{The estimator quality depends on the look-back (LB) period;} \\, \\therefore $\n",
     "\n",
     "- $\\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}.$\n",
     "\n",
