--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -84,13 +84,13 @@
     "\n",
     "$ \\text{The estimator quality depends on the look-back (LB) period;} \\, \\therefore $\n",
     "\n",
-    "- $\\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}.$\n",
+    "- $\\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}. $\n",
     "\n",
-    "- $\\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}.$\n",
+    "- $\\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}. $\n",
     "\n",
-    "- $\\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}.$\n",
+    "- $\\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}. $\n",
     "\n",
-    "I define **Term-Structure** for $\\text{Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}$.\n",
+    "$ \\text{I define Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. $\n",
     "\n",
     "### 1.5 Synthesis\n",
     "\n",
