--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -54,15 +54,15 @@
     "\n",
     "$ \\text{The performance / risk profiles are sensitive} $\n",
     "\n",
-    "$ \\text{to the target Beta and the market environment} . $\n",
+    "$ \\text{to the target Beta and the market environment}. $\n",
     "\n",
     "$ \\text{A low Beta indicates decorrelation;} $ \n",
     "\n",
-    "$ \\text{a high Beta is the antithesis.} $\n",
+    "$ \\text{a high Beta is the antithesis}. $\n",
     "\n",
     "<br>\n",
     "\n",
-    "$ \\text{Portfolio Characteristics Definition:} $\n",
+    "$ \\text{Portfolio Characteristics Definition}: $\n",
     "\n",
     "- $\\text{Return} : \\mu$\n",
     "\n",
@@ -76,13 +76,13 @@
     "\n",
     "### $ 1.4 \\; \\text{Simplification} $\n",
     "\n",
-    "$ \\text{Post Factor Model (FM) construction,} $\n",
+    "$ \\text{Post Factor Model (FM) construction}, $\n",
     "\n",
-    "$ \\text{I use trend following estimators for} \\, \\bf{\\mu} .$ \n",
+    "$ \\text{I use trend following estimators for} \\, \\bf{\\mu}. $ \n",
     "\n",
     "<br>\n",
     "\n",
-    "$ \\text{The estimator quality depends on the look-back (LB) period;} \\, \\therefore $\n",
+    "$ \\text{The estimator quality depends on the look-back (LB) period}; \\, \\therefore $\n",
     "\n",
     "- $\\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}. $\n",
     "\n",
@@ -92,15 +92,23 @@
     "\n",
     "$ \\text{I define Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. $\n",
     "\n",
-    "### 1.5 Synthesis\n",
+    "### $ 1.5 \\; \\text{Synthesis} $\n",
     "\n",
-    "Optimal portfolio behavior constructed from covariance and expected return estimators will vary due to strategic and market differences.\n",
+    "$ \\text{Optimal portfolio behavior constructed from} $\n",
+    "\n",
+    "$ \\text{covariance and expected return estimators} $\n",
+    "\n",
+    "$ \\text{will vary due to strategic and market differences}. $\n",
+    "\n",
+    "<br>\n",
     "\n",
     "$$\n",
     "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{1}\n",
     "$$\n",
     "\n",
-    "$\\text{Goal} :$\n",
+    "<br>\n",
+    "\n",
+    "$ \\text{Goal}: $\n",
     "- $\\text{Evaluate Hypothesis}$\n",
     "- $\\text{Demonstrate Robustness (Or Lack Thereof)}$\n",
     "- $\\text{Market Regime Stratification}$"
