--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -109,16 +109,16 @@
     "<br>\n",
     "\n",
     "$ \\text{Goal}: $\n",
-    "- $\\text{Evaluate Hypothesis}$\n",
-    "- $\\text{Demonstrate Robustness (Or Lack Thereof)}$\n",
-    "- $\\text{Market Regime Stratification}$"
+    "- $ \\text{Evaluate Hypothesis} $\n",
+    "- $ \\text{Demonstrate Robustness (Or Lack Thereof)} $\n",
+    "- $ \\text{Market Regime Stratification} $"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2 $\\,$ (Investment) Strategy\n",
+    "## $ 2 \\, \\text{(Investment) Strategy} $\n",
     "\n",
     "$\\text{Theory \\& Math}$\n",
     "\n",
