--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -118,21 +118,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $ 2 \\, \\text{(Investment) Strategy} $\n",
+    "## $ 2 \\, \\text{Strategy} $\n",
     "\n",
-    "$\\text{Theory \\& Math}$\n",
+    "$ \\text{Theory \\& Math} $\n",
     "\n",
-    "### 2.1 (Mathematical) Strategic Formulation\n",
+    "### $ 2.1 \\, \\text{Strategic Formulation} $\n",
     "\n",
-    "$\\text{Consider two strategies}$:\n",
+    "$ \\text{Consider two strategies}: $\n",
     "\n",
     "$$\n",
+    "\n",
     "\\text{(Strategy I)} \n",
+    "\n",
     "\\quad \n",
     "\n",
     "\\begin{cases}\n",
     "\n",
     "\\underset{\\omega \\in \\mathbb{R}^n} \\max \\; \\rho^T \\omega - \\lambda \\sqrt{\\omega^T \\Sigma \\omega} \n",
+    "\n",
     "\\\\\n",
     "\n",
     "\\\\\n",
@@ -140,23 +143,31 @@
     "-0.5 \\leq \\sum_{i=1}^n \\beta_i^m \\omega_i \\leq 0.5 \n",
     "\n",
     "\\\\\n",
+    "\n",
     "\\\\\n",
+    "\n",
     "\\sum_{i=1}^n \\omega_i = 1, \\quad -2 \\leq \\omega_i \\leq 2,\n",
-    "\\end{cases} \n",
+    "\n",
+    "\\end{cases}\n",
+    "\n",
     "\\quad \n",
     "\n",
     "\\tag{1}\n",
-    "$$\n",
-    "\n",
-    "$\\text{and}$\n",
     "\n",
     "$$\n",
-    "\\text{(Strategy II)} \n",
+    "\n",
+    "$ \\text{and} $\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "\\text{(Strategy II)}\n",
+    "\n",
     "\\quad \n",
     "\n",
     "\\begin{cases}\n",
     "\n",
     "\\underset{\\omega \\in \\mathbb{R}^n} \\max \\; \\frac{\\rho^T \\omega}{\\text{TEV}(\\omega)} - \\lambda \\sqrt{\\omega^T \\Sigma \\omega} \n",
+    "\n",
     "\\\\\n",
     "\n",
     "\\\\\n",
@@ -164,14 +175,21 @@
     "-2 \\leq \\sum_{i=1}^n \\beta_i^m \\omega_i \\leq 2 \n",
     "\n",
     "\\\\\n",
+    "\n",
     "\\\\\n",
+    "\n",
     "\\sum_{i=1}^n \\omega_i = 1, \\quad -2 \\leq \\omega_i \\leq 2,\n",
     "\n",
-    "\\end{cases} \n",
+    "\\end{cases}\n",
+    "\n",
     "\\quad \n",
     "\n",
     "\\tag{2}\n",
+    "\n",
     "$$\n",
+    "\n",
+    "<br>\n",
+    "\n",
     "- $\\Sigma \\equiv \\text{covariance matrix between security returns (FF3FM).}$\n",
     "\n",
     "- $\\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)} \\equiv \\text{Beta of security} \\; S_i \\; \\text{(CAPM) s.t.} \\; \\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i \\equiv \\text{Porfolio Beta};$\n",
