--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -192,7 +192,7 @@
     "\n",
     "- $\\Sigma \\equiv \\text{covariance matrix between security returns (FF3FM).}$\n",
     "\n",
-    "- $\\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)} \\equiv \\text{Beta of security} \\; S_i \\; \\text{(CAPM) s.t.} \\; \\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i \\equiv \\text{Porfolio Beta};$\n",
+    "- $\\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)} \\equiv \\text{Beta of security} \\; S_i \\; \\text{(CAPM) s.t.} \\\\ \\; \\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i \\equiv \\text{Porfolio Beta};$\n",
     "\n",
     "- $\\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}})$ is the '**Tracking Error Volatility**'; the derivation is trivial and left as an exercise to the reader:\n",
     "\n",
