--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -197,24 +197,44 @@
     "- $ \\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}}) \\, \\text{is the Tracking Error Volatility}; \\\\ \\text{the derivation is trivial and left as an exercise to the reader}: $\n",
     "\n",
     "$$\n",
-    "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}. \\tag{3}\n",
+    "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}.      \\tag{3}\n",
     "$$\n",
     "\n",
-    "### 2.2 Fama–French Three-Factor Model (FF3FM)\n",
+    "### $ 2.2 \\, \\text{Fama–French Three-Factor Model (FF3FM)} $\n",
     "\n",
-    "The [Fama-French Three-Factor Model](https://en.wikipedia.org/wiki/Fama%E2%80%93French_three-factor_model) (FF3FM) is defined as follows:\n",
-    "\n",
-    "$$\n",
-    "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i \\tag{4}\n",
-    "$$\n",
-    "\n",
-    "Assume $\\mathbb{E}[\\epsilon_i] = 0$; therefore,\n",
+    "$ \\text{Fama-French Three-Factor Model (FF3FM) Definition}: $\n",
     "\n",
     "$$\n",
-    "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i \\tag{5}\n",
+    "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i      \\tag{4}\n",
     "$$\n",
     "\n",
-    "The $3$ coefficients $\\beta_i^3$, $b_i^s$, and $b_i^v$ are estimated by making a linear regression of the time series $y_i = \\rho_i - r_f$ against the time series $\\rho_M - r_f$ (**Momentum Factor**), $r_{\\text{SMB}}$ (**Size Factor**), and $\\rho_{\\text{HML}}$ (**Value Factor**).\n",
+    "$ \\mathbb{E}[\\epsilon_i] = 0; \\, \\therefore $\n",
+    "\n",
+    "$$\n",
+    "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i      \\tag{5}\n",
+    "$$\n",
+    "\n",
+    "<br>\n",
+    "\n",
+    "$$\n",
+    "\\text{Estimated Coefficient Vector}:\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "(\\hat{\\beta}_i^3, \\hat{b}_i^s, \\hat{b}_i^v)^{\\intercal} \\Leftarrow y_i = \\rho_i - r_f     \\tag{6}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\\text{Linear Regression}:\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "= \\hat{\\beta}_i^3 (\\rho_M - r_f) + \\hat{\\beta}_i^s r_{\\text{SMB}} + \\hat{b}_i^v \\rho_{\\text{HML}} + \\epsilon_i       \\tag{7}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "\n",
+    "$$\n",
     "\n",
     "$\\beta_i^m \\neq \\beta_i^3$ in tandem with the requirement to be estimated via a separate regression or directly computed.\n",
     "\n",
