--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -236,7 +236,9 @@
     "\n",
     "$$\n",
     "\n",
-    "$\\beta_i^m \\neq \\beta_i^3$ in tandem with the requirement to be estimated via a separate regression or directly computed.\n",
+    "$$\n",
+    "\\beta_i^m \\neq \\beta_i^3, \\quad \\text{and must be estimated via a separate regression / computed directly}.\n",
+    "$$\n",
     "\n",
     "### 2.3 Executive Summary Formulation\n",
     "\n",
