--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -202,7 +202,7 @@
     "\n",
     "### $ 2.2 \\, \\text{Fama–French Three-Factor Model (FF3FM)} $\n",
     "\n",
-    "$ \\text{Fama-French Three-Factor Model (FF3FM) Definition}: $\n",
+    "$ \\text{Fama-French Three-Factor Model (FF3FM)}: $\n",
     "\n",
     "$$\n",
     "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i      \\tag{4}\n",
