--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -42,13 +42,13 @@
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
     "\n",
-    "$ \\text{The portfolios are reallocated weekly from} \\, \\texttt{`03-01-2007`} \\, \\text{to} \\, \\text{`03-31-2024`}. $ \n",
+    "$ \\text{The portfolios are reallocated weekly from} \\, \\texttt{`03-01-2007`} \\, \\text{to} \\, \\texttt{`03-31-2024`}; $ \n",
     "\n",
-    "$ \\text{My investment universe} \\equiv \\text{ETFs ('Global World Economy')}. $\n",
+    "$ \\text{Investment Universe} \\equiv \\text{ETFs ('Global World Economy')}; $\n",
     "\n",
-    "$ \\text{I use the Fama–French Three-Factor Model (Momentum, Value, Size)}. $\n",
+    "$ \\text{Fama–French Three-Factor Model (Momentum, Value, Size)}; $\n",
     "\n",
-    "$ \\text{The data is publicly available}. $\n",
+    "$ \\text{Public Data}. $\n",
     "\n",
     "### $ 1.3 \\; \\text{Performance Evaluation} $\n",
     "\n",
@@ -190,7 +190,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "- $ \\Sigma \\equiv \\text{covariance matrix between security returns (FF3FM).} $\n",
+    "- $ \\Sigma \\equiv \\text{covariance matrix between security returns (FF3FM)}; $\n",
     "\n",
     "- $ \\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)} \\equiv \\text{Beta of security} \\; S_i \\; \\text{(CAPM) s.t.} \\\\ \\; \\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i \\equiv \\text{Porfolio Beta}; $\n",
     "\n",
