--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -62,7 +62,7 @@
     "\n",
     "<br>\n",
     "\n",
-    "$ \\text{Portfolio Characteristics Definition}: $\n",
+    "$ \\text{Portfolio Characteristics}: $\n",
     "\n",
     "- $\\text{Return} : \\mu$\n",
     "\n",
@@ -70,7 +70,7 @@
     "\n",
     "- $\\text{Skew} : (\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
     "\n",
-    "- $\\text{VaR / Expected Shortfall}$\n",
+    "- $\\text{VaR / ES}$\n",
     "\n",
     "- $\\text{Sharpe} : \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$\n",
     "\n",
