--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -90,7 +90,7 @@
     "\n",
     "- $\\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}. $\n",
     "\n",
-    "$ \\text{I define Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. $\n",
+    "$ \\text{I define the Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. $\n",
     "\n",
     "### $ 1.5 \\; \\text{Synthesis} $\n",
     "\n",
