--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -118,11 +118,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $ 2 \\, \\text{Strategy} $\n",
+    "## $ 2 \\; \\; \\text{Strategy} $\n",
     "\n",
     "$ \\text{Theory \\& Math} $\n",
     "\n",
-    "### $ 2.1 \\, \\text{Strategic Formulation} $\n",
+    "### $ 2.1 \\; \\text{Strategic Formulation} $\n",
     "\n",
     "$ \\text{Consider two strategies}: $\n",
     "\n",
