--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -194,7 +194,7 @@
     "\n",
     "- $ \\beta_i^m = \\frac{\\text{Cov}(r_i, r_M)}{\\sigma^2(r_M)} \\equiv \\text{Beta of security} \\; S_i \\; \\text{(CAPM) s.t.} \\\\ \\; \\beta_P^m = \\sum_{i = 1}^n \\beta_i^m \\omega_i \\equiv \\text{Porfolio Beta}; $\n",
     "\n",
-    "- $ \\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}}) \\, \\text{is the Tracking Error Volatility}; \\\\ \\text{trivial derivation (reader exercise)}: $\n",
+    "- $ \\text{TEV}(\\omega) = \\sigma(r_P(\\omega) - r_{\\text{SPY}}) \\equiv \\text{Tracking Error Volatility}; \\\\ \\text{trivial derivation (reader exercise)}: $\n",
     "\n",
     "$$\n",
     "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}.      \\tag{3}\n",
