--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -200,9 +200,9 @@
     "\\sigma(r_P(\\omega) - r_{\\text{SPY}}) = \\sqrt{\\omega^{\\intercal} \\Sigma \\omega - 2 \\omega^{\\intercal} \\text{Cov}(r, r_{\\text{SPY}}) + \\sigma_{\\text{SPY}}^2}.      \\tag{3}\n",
     "$$\n",
     "\n",
-    "### $ 2.2 \\, \\text{Fama–French Three-Factor Model (FF3FM)} $\n",
+    "### $ 2.2 \\; \\text{Fama–French Three-Factor Model (FF3FM)} $\n",
     "\n",
-    "$ \\text{Fama-French Three-Factor Model (FF3FM)}: $\n",
+    "$ \\text{Definition}: $\n",
     "\n",
     "$$\n",
     "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i      \\tag{4}\n",
@@ -237,7 +237,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\beta_i^m \\neq \\beta_i^3, \\quad \\text{and must be estimated via a separate regression / computed directly}.\n",
+    "\\beta_i^m \\neq \\beta_i^3 \\mid \\text{estimated via separate regression / computed directly}.\n",
     "$$\n",
     "\n",
     "### 2.3 Executive Summary Formulation\n",
