--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -84,13 +84,15 @@
     "\n",
     "$ \\text{The estimator quality depends on the look-back (LB) period}; \\, \\therefore $\n",
     "\n",
-    "- $\\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}. $\n",
+    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}.             \\tag{1}$$\n",
     "\n",
-    "- $\\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}. $\n",
+    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}.           \\tag{2} $$\n",
     "\n",
-    "- $\\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}. $\n",
+    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}.          \\tag{3} $$\n",
     "\n",
-    "$ \\text{I define the Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. $\n",
+    "<br>\n",
+    "\n",
+    "$ \\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. $\n",
     "\n",
     "### $ 1.5 \\; \\text{Synthesis} $\n",
     "\n",
