--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -20,13 +20,14 @@
     "### $ 1.1 \\; \\text{Goal} $\n",
     "\n",
     "\n",
-    "$ \\text{The objective is to build and compare two factor-based long short allocation models} $\n",
-    "$ \\text{with constraints on their betas}. $\n",
+    "$ \\text{Objective : Build / Compare Two Factor-Based L/S Allocation Models}; $\n",
+    "\n",
+    "$ \\text{Beta} \\; \\beta \\; \\text{Constraints}. $\n",
     "\n",
     "\n",
-    "$ \\text{The first strategy considers a target Beta in the interval} \\; [-0.5, 0.5] \\;\n",
+    "$ \\text{First Strategy} \\; (S_{ \\{1\\} } ) : \\text{Target Beta} \\; \\beta_T \\in [-0.5, 0.5]; \\;\n",
     "\\\\ \n",
-    "\\text{while the second has one in the interval} \\; [-2, +2]. $\n",
+    "\\text{Second \\ldots} \\in \\; [-2, +2]. $\n",
     "\n",
     "\n",
     "$ \\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);}$ \n",
