--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -22,7 +22,7 @@
     "\n",
     "$ \\text{Objective : Build / Compare Two Factor-Based L/S Allocation Models}; $\n",
     "\n",
-    "$ \\text{Beta} \\; \\beta \\; \\text{Constraints}. $\n",
+    "$ \\text{Beta} \\; (\\beta) \\; \\text{Constraints}. $\n",
     "\n",
     "\n",
     "$ \\text{First Strategy} \\; (S_{ \\{1\\} } ) : \\text{Target Beta} \\; \\beta_T \\in [-0.5, 0.5]; \\;\n",
