--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -29,16 +29,15 @@
     "\\\\ \n",
     "\\text{Second \\ldots} \\in \\; [-2, +2]. $\n",
     "\n",
+    "$ S_{ \\{1\\} } \\approxeq \\text{Value-at-Risk Utility (Robust Optimization);}$\n",
     "\n",
-    "$ \\text{The first operates similar to a Value-at-Risk Utility (Robust Optimization);}$ \n",
+    "$ S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio}. $\n",
     "\n",
-    "$ \\text{the second incorporates an Information Ratio}. $\n",
-    "\n",
-    "$ \\text{Post optimization, I compare the model outcomes while evaluating their sensitivity} \n",
+    "$ \\text{Post optimization, I compare the model outcomes while evaluating} \n",
     "\\\\\n",
-    "\\text{to estimator length for the covariance matrix} $\n",
+    "\\text{estimator length sensitivity for covariance matrix} \\; \\boldsymbol{\\Sigma} $\n",
     "\n",
-    "$ \\text{and expected returns across market regimes}. $\n",
+    "$ \\text{and expected returns} \\; \\boldsymbol{\\mu} \\; \\text{across market regimes}. $\n",
     "\n",
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
