--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -33,11 +33,11 @@
     "\n",
     "$ S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio}. $\n",
     "\n",
-    "$ \\text{Post optimization, I compare the model outcomes while evaluating} \n",
+    "$ \\text{Post optimization, I compare model outcomes while evaluating} \n",
     "\\\\\n",
-    "\\text{estimator length sensitivity for covariance matrix} \\; \\boldsymbol{\\Sigma} $\n",
+    "\\text{estimator length sensitivity [covariance matrix} \\; \\boldsymbol{\\Sigma} $\n",
     "\n",
-    "$ \\text{and expected returns} \\; \\boldsymbol{\\mu} \\; \\text{across market regimes}. $\n",
+    "$ \\land \\; \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes}. $\n",
     "\n",
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
