--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -42,7 +42,17 @@
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
     "\n",
-    "$ \\text{The portfolios are reallocated weekly from} \\, \\texttt{`03-01-2007`} \\, \\text{to} \\, \\texttt{`03-31-2024`}; $ \n",
+    "$$ \n",
+    "\\text{Portfolio Allocation} \\; \\{ P_t \\} \\Leftarrow \\texttt{`03-01-2007`} \\, \\sim \\, \\texttt{`03-31-2024`};             \\tag{1}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "P_t \\quad \\forall \\, t \\in \\{t_0, t_1, t_2, \\ldots, t_n\\} \\quad \\quad t_0 = \\texttt{03-01-2007}, \\quad t_n = \\texttt{03-31-2024}           \\tag{2}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "t_i = t_{i-1} + 7 \\text{ days} \\quad \\quad i = 1, 2, \\ldots, n.          \\tag{3}\n",
+    "$$\n",
     "\n",
     "$ \\text{Investment Universe} \\equiv \\text{ETFs ('Global World Economy')}; $\n",
     "\n",
