--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -20,25 +20,37 @@
     "### $ 1.1 \\; \\text{Goal} $\n",
     "\n",
     "\n",
-    "$ \\text{Objective : Build / Compare Two Factor-Based L/S Allocation Models}; $\n",
+    "$$\n",
+    "\\text{Objective: Build / Compare Two Factor-Based L/S Allocation Models}\n",
+    "$$\n",
     "\n",
-    "$ \\text{Beta} \\; (\\beta) \\; \\text{Constraints}. $\n",
+    "$$\n",
+    "\\text{Beta} \\; (\\beta) \\; \\text{Constraints}\n",
+    "$$\n",
     "\n",
+    "$$\n",
+    "\\text{First Strategy} \\; (S_{ \\{1\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-0.5, 0.5]\n",
+    "$$\n",
     "\n",
-    "$ \\text{First Strategy} \\; (S_{ \\{1\\} } ) : \\text{Target Beta} \\; \\beta_T \\in [-0.5, 0.5]; \\;\n",
-    "\\\\ \n",
-    "\\text{Second \\ldots} \\in \\; [-2, +2]. $\n",
+    "$$\n",
+    "\\text{Second Strategy} \\; (S_{ \\{2\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-2, 2]\n",
+    "$$\n",
     "\n",
-    "$ S_{ \\{1\\} } \\approxeq \\text{Value-at-Risk Utility (Robust Optimization);}$\n",
+    "$$\n",
+    "S_{ \\{1\\} } \\approxeq \\text{Value-at-Risk Utility (Robust Optimization)}\n",
+    "$$\n",
     "\n",
-    "$ S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio}. $\n",
+    "$$\n",
+    "S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio}\n",
+    "$$\n",
     "\n",
-    "$ \\text{Post optimization, I compare model outcomes while evaluating} \n",
-    "\\\\\n",
-    "\\text{estimator length sensitivity [covariance matrix} \\; \\boldsymbol{\\Sigma} $\n",
+    "$$\n",
+    "\\text{Post optimization, I compare model outcomes while evaluating estimator length sensitivity}\n",
+    "$$\n",
     "\n",
-    "$ \\land \\; \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes}. $\n",
-    "\n",
+    "$$\n",
+    "\\text{[covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes}.\n",
+    "$$\n",
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
     "\n",
@@ -54,11 +66,17 @@
     "t_i = t_{i-1} + 7 \\text{ days} \\quad \\quad i = 1, 2, \\ldots, n.          \\tag{3}\n",
     "$$\n",
     "\n",
-    "$ \\text{Investment Universe} \\equiv \\text{ETFs ('Global World Economy')}; $\n",
+    "$$\n",
+    "\\text{Investment Universe} \\equiv \\text{ETFs ('Global World Economy')}; \n",
+    "$$\n",
     "\n",
-    "$ \\text{Fama–French Three-Factor Model (Momentum, Value, Size)}; $\n",
+    "$$\n",
+    "\\text{Fama–French Three-Factor Model (Momentum, Value, Size)}; \n",
+    "$$\n",
     "\n",
-    "$ \\text{Public Data}. $\n",
+    "$$ \n",
+    "\\text{Public Data}. \n",
+    "$$\n",
     "\n",
     "### $ 1.3 \\; \\text{Performance Evaluation} $\n",
     "\n",
