--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -29,53 +29,53 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{First Strategy} \\; (S_{ \\{1\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-0.5, 0.5]\n",
+    "\\text{First Strategy} \\; (S_{ \\{1\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-0.5, 0.5]          \\tag{1}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Second Strategy} \\; (S_{ \\{2\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-2, 2]\n",
+    "\\text{Second Strategy} \\; (S_{ \\{2\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-2, 2]             \\tag{2}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "S_{ \\{1\\} } \\approxeq \\text{Value-at-Risk Utility (Robust Optimization)}\n",
+    "S_{ \\{1\\} } \\approxeq \\text{Value-at-Risk Utility (Robust Optimization)}            \\tag{3}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio}\n",
+    "S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio}             \\tag{4}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Post optimization, I compare model outcomes while evaluating estimator length sensitivity}\n",
+    "\\text{Post optimization, I compare model outcomes while evaluating estimator length sensitivity}            \\tag{5}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{[covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes}.\n",
+    "\\text{[covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes}             \\tag{6}\n",
     "$$\n",
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
     "\n",
     "$$ \n",
-    "\\text{Portfolio Allocation} \\; \\{ P_t \\} \\Leftarrow \\texttt{`03-01-2007`} \\, \\sim \\, \\texttt{`03-31-2024`};             \\tag{1}\n",
+    "\\text{Portfolio Allocation} \\; \\{ P_t \\} \\Leftarrow \\texttt{`03-01-2007`} \\, \\sim \\, \\texttt{`03-31-2024`};             \\tag{7}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "P_t \\quad \\forall \\, t \\in \\{t_0, t_1, t_2, \\ldots, t_n\\} \\quad \\quad t_0 = \\texttt{03-01-2007}, \\quad t_n = \\texttt{03-31-2024}           \\tag{2}\n",
+    "P_t \\quad \\forall \\, t \\in \\{t_0, t_1, t_2, \\ldots, t_n\\} \\quad \\quad t_0 = \\texttt{03-01-2007}, \\quad t_n = \\texttt{03-31-2024}           \\tag{8}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "t_i = t_{i-1} + 7 \\text{ days} \\quad \\quad i = 1, 2, \\ldots, n.          \\tag{3}\n",
+    "t_i = t_{i-1} + 7 \\text{ days} \\quad \\quad i = 1, 2, \\ldots, n.          \\tag{9}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Investment Universe} \\equiv \\text{ETFs ('Global World Economy')}; \n",
+    "\\text{Investment Universe} \\equiv \\text{ETFs ('Global World Economy')};             \\tag{10} \n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Fama–French Three-Factor Model (Momentum, Value, Size)}; \n",
+    "\\text{Fama–French Three-Factor Model (Momentum, Value, Size)};          \\tag{11} \n",
     "$$\n",
     "\n",
     "$$ \n",
-    "\\text{Public Data}. \n",
+    "\\text{Public Data}.             \\tag{12} \n",
     "$$\n",
     "\n",
     "### $ 1.3 \\; \\text{Performance Evaluation} $\n",
