--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -19,9 +19,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## $1 \\; \\text{Overview}$\n",
+    "## $ 1 \\; \\text{Overview} $\n",
     "\n",
-    "### $1.1 \\; \\text{Goal}$\n",
+    "### $ 1.1 \\; \\text{Goal} $\n",
     "\n",
     "$$\n",
     "\\text{Objective: Build / Compare Two Factor-Based L/S Allocation Models}\n",
@@ -55,7 +55,7 @@
     "\\text{[covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes} \\tag{6}\n",
     "$$\n",
     "\n",
-    "### $1.2 \\; \\text{Reallocation}$\n",
+    "### $ 1.2 \\; \\text{Reallocation} $\n",
     "\n",
     "$$ \n",
     "\\text{Portfolio Allocation} \\; \\{ P_t \\} \\Leftarrow \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{7}\n",
@@ -83,13 +83,17 @@
     "\n",
     "### $ 1.3 \\; \\text{Performance Evaluation} $\n",
     "\n",
-    "$ \\text{The performance / risk profiles are sensitive} $\n",
+    "$$\n",
+    "\\text{The performance / risk profiles are sensitive to the target Beta and the market environment.} \\tag{13}\n",
+    "$$\n",
     "\n",
-    "$ \\text{to the target Beta and the market environment}. $\n",
+    "$$\n",
+    "\\text{A low Beta indicates decorrelation;} \\tag{14}\n",
+    "$$\n",
     "\n",
-    "$ \\text{A low Beta indicates decorrelation;} $ \n",
-    "\n",
-    "$ \\text{a high Beta is the antithesis}. $\n",
+    "$$\n",
+    "\\text{a high Beta is the antithesis.} \\tag{15}\n",
+    "$$\n",
     "\n",
     "<br>\n",
     "\n",
