--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -97,17 +97,29 @@
     "\n",
     "<br>\n",
     "\n",
-    "$ \\text{Portfolio Characteristics}: $\n",
+    "$$\n",
+    "\\text{Portfolio Characteristics}:\n",
+    "$$\n",
     "\n",
-    "- $\\text{Return} : \\mu$\n",
+    "$$\n",
+    "\\text{Return}: \\mu \\tag{16}\n",
+    "$$\n",
     "\n",
-    "- $\\text{Vol} : \\sigma$\n",
+    "$$\n",
+    "\\text{Volatility (Vol)}: \\sigma \\tag{17}\n",
+    "$$\n",
     "\n",
-    "- $\\text{Skew} : (\\mathbb{E}[(\\frac{x - \\mu}{\\sigma})^3]) = \\frac{\\mu_3}{\\sigma_3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}}$\n",
+    "$$\n",
+    "\\text{Skewness (Skew)}: \\mathbb{E}\\left[\\left(\\frac{x - \\mu}{\\sigma}\\right)^3\\right] = \\frac{\\mu_3}{\\sigma^3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}} \\tag{18}\n",
+    "$$\n",
     "\n",
-    "- $\\text{VaR / ES}$\n",
+    "$$\n",
+    "\\text{Value at Risk (VaR) / Expected Shortfall (ES)} \\tag{19}\n",
+    "$$\n",
     "\n",
-    "- $\\text{Sharpe} : \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}}$\n",
+    "$$\n",
+    "\\text{Sharpe Ratio}: \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}} \\tag{20}\n",
+    "$$\n",
     "\n",
     "### $ 1.4 \\; \\text{Simplification} $\n",
     "\n",
