--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -88,11 +88,11 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{A low Beta indicates decorrelation;} \\tag{14}\n",
+    "\\text{Low Beta} \\Rightarrow \\text{Decorrelation;} \\tag{14}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{a high Beta is the antithesis.} \\tag{15}\n",
+    "\\text{High Beta} \\equiv \\text{Antithesis.} \\tag{15}\n",
     "$$\n",
     "\n",
     "<br>\n",
