--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -7,11 +7,11 @@
     "## $0 \\; \\; \\text{Amendment}$\n",
     "\n",
     "$$\n",
-    "\\text{Response to} \\; \\bf{25\\%};\n",
+    "\\text{Response to} \\; \\bf{25\\%}; \\tag{-1}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{This is my corrective action.}\n",
+    "\\text{This is my corrective action.} \\tag{0}\n",
     "$$"
    ]
   },
