--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -133,24 +133,41 @@
     "\n",
     "### $ 1.5 \\; \\text{Synthesis} $\n",
     "\n",
-    "$ \\text{Optimal portfolio behavior constructed from} $\n",
+    "$$\n",
+    "\\text{Optimal portfolio behavior constructed from}\n",
+    "$$\n",
     "\n",
-    "$ \\text{covariance and expected return estimators} $\n",
+    "$$\n",
+    "\\text{covariance and expected return estimators}\n",
+    "$$\n",
     "\n",
-    "$ \\text{will vary due to strategic and market differences}. $\n",
+    "$$\n",
+    "\\text{will vary due to strategic and market differences}.\n",
+    "$$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{4}\n",
+    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{21}\n",
     "$$\n",
     "\n",
     "<br>\n",
     "\n",
-    "$ \\text{Goal}: $\n",
-    "- $ \\text{Evaluate Hypothesis} $\n",
-    "- $ \\text{Demonstrate Robustness (Or Lack Thereof)} $\n",
-    "- $ \\text{Market Regime Stratification} $"
+    "$$\n",
+    "\\text{Goal}:\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "- \\text{Evaluate Hypothesis} \\tag{22}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "- \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{23}\n",
+    "$$\n",
+    "\n",
+    "$$\n",
+    "- \\text{Market Regime Stratification} \\tag{24}\n",
+    "$$"
    ]
   },
   {
