--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -154,20 +154,14 @@
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Goal}:\n",
+    "\\text{Objective}:\n",
     "$$\n",
     "\n",
-    "$$\n",
-    "- \\text{Evaluate Hypothesis} \\tag{22}\n",
-    "$$\n",
+    "- $$ \\text{Evaluate Hypothesis} \\tag{22} $$\n",
     "\n",
-    "$$\n",
-    "- \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{23}\n",
-    "$$\n",
+    "- $$ \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{23} $$\n",
     "\n",
-    "$$\n",
-    "- \\text{Market Regime Stratification} \\tag{24}\n",
-    "$$"
+    "- $$ \\text{Market Regime Stratification} \\tag{24} $$"
    ]
   },
   {
