--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -111,25 +111,21 @@
     "\n",
     "- $$ \\text{Sharpe Ratio}: \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}} \\tag{20} $$\n",
     "\n",
-    "### $ 1.4 \\; \\text{Simplification} $\n",
+    "### $1.4 \\; \\text{Simplification}$\n",
     "\n",
-    "$ \\text{Post Factor Model (FM) construction}, $\n",
+    "$$ \\text{Look-Back} \\; \\boldsymbol{\\mu} \\; \\text{Estimators}: $$\n",
     "\n",
-    "$ \\text{I use trend following estimators for} \\, \\bf{\\mu}. $ \n",
+    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{25} $$\n",
     "\n",
-    "<br>\n",
+    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{26} $$\n",
     "\n",
-    "$ \\text{The estimator quality depends on the look-back (LB) period}; \\, \\therefore $\n",
-    "\n",
-    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\}.             \\tag{1}$$\n",
-    "\n",
-    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\}.           \\tag{2} $$\n",
-    "\n",
-    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\}.          \\tag{3} $$\n",
+    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{27} $$\n",
     "\n",
     "<br>\n",
     "\n",
-    "$ \\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. $\n",
+    "$$\n",
+    "\\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}.\n",
+    "$$\n",
     "\n",
     "### $ 1.5 \\; \\text{Synthesis} $\n",
     "\n",
