--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -115,16 +115,16 @@
     "\n",
     "$$ \\text{Look-Back} \\; \\boldsymbol{\\mu} \\; \\text{Estimators}: $$\n",
     "\n",
-    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{25} $$\n",
+    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{21} $$\n",
     "\n",
-    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{26} $$\n",
+    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{22} $$\n",
     "\n",
-    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{27} $$\n",
+    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{23} $$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}.\n",
+    "\\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. \\tag{24}\n",
     "$$\n",
     "\n",
     "### $ 1.5 \\; \\text{Synthesis} $\n",
@@ -144,7 +144,7 @@
     "<br>\n",
     "\n",
     "$$\n",
-    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{21}\n",
+    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{25}\n",
     "$$\n",
     "\n",
     "<br>\n",
@@ -153,11 +153,11 @@
     "\\text{Objective}:\n",
     "$$\n",
     "\n",
-    "- $$ \\text{Evaluate Hypothesis} \\tag{22} $$\n",
+    "- $$ \\text{Evaluate Hypothesis} \\tag{26} $$\n",
     "\n",
-    "- $$ \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{23} $$\n",
+    "- $$ \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{27} $$\n",
     "\n",
-    "- $$ \\text{Market Regime Stratification} \\tag{24} $$"
+    "- $$ \\text{Market Regime Stratification} \\tag{28} $$"
    ]
   },
   {
