--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -24,75 +24,75 @@
     "### $ 1.1 \\; \\text{Goal} $\n",
     "\n",
     "$$\n",
-    "\\text{Objective: Build / Compare Two Factor-Based L/S Allocation Models}\n",
+    "\\text{Objective: Build / Compare Two Factor-Based L/S Allocation Models} \\tag{1}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Beta} \\; (\\beta) \\; \\text{Constraints}\n",
+    "\\text{Beta} \\; (\\beta) \\; \\text{Constraints} \\tag{2}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{First Strategy} \\; (S_{ \\{1\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-0.5, 0.5] \\tag{1}\n",
+    "\\text{First Strategy} \\; (S_{ \\{1\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-0.5, 0.5] \\tag{3}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Second Strategy} \\; (S_{ \\{2\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-2, 2] \\tag{2}\n",
+    "\\text{Second Strategy} \\; (S_{ \\{2\\} }) : \\text{Target Beta} \\; \\beta_T \\in [-2, 2] \\tag{4}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "S_{ \\{1\\} } \\approxeq \\text{Value-at-Risk Utility (Robust Optimization)} \\tag{3}\n",
+    "S_{ \\{1\\} } \\approxeq \\text{Value-at-Risk Utility (Robust Optimization)} \\tag{5}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio} \\tag{4}\n",
+    "S_{ \\{1\\} } \\Leftarrow \\text{Information Ratio} \\tag{6}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Post optimization, I compare model outcomes while evaluating estimator length sensitivity} \\tag{5}\n",
+    "\\text{Post optimization, I compare model outcomes while evaluating estimator length sensitivity} \\tag{7}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{[covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes} \\tag{6}\n",
+    "\\text{[covariance matrix} \\; \\boldsymbol{\\Sigma} \\land \\text{expected returns} \\; \\boldsymbol{\\mu}] \\; \\text{across market regimes} \\tag{8}\n",
     "$$\n",
     "\n",
     "### $ 1.2 \\; \\text{Reallocation} $\n",
     "\n",
     "$$ \n",
-    "\\text{Portfolio Allocation} \\; \\{ P_t \\} \\Leftarrow \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{7}\n",
+    "\\text{Portfolio Allocation} \\; \\{ P_t \\} \\Leftarrow \\texttt{`03-01-2007`} \\sim \\texttt{`03-31-2024`} \\tag{9}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "P_t \\quad \\forall \\, t \\in \\{t_0, t_1, t_2, \\ldots, t_n\\} \\quad \\text{where} \\quad t_0 = \\texttt{03-01-2007}, \\quad t_n = \\texttt{03-31-2024} \\tag{8}\n",
+    "P_t \\quad \\forall \\, t \\in \\{t_0, t_1, t_2, \\ldots, t_n\\} \\quad \\text{where} \\quad t_0 = \\texttt{03-01-2007}, \\quad t_n = \\texttt{03-31-2024} \\tag{10}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "t_i = t_{i-1} + 7 \\text{ days} \\quad \\text{for} \\quad i = 1, 2, \\ldots, n \\tag{9}\n",
+    "t_i = t_{i-1} + 7 \\text{ days} \\quad \\text{for} \\quad i = 1, 2, \\ldots, n \\tag{11}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Investment Universe} \\equiv \\text{ETFs ('Global World Economy')} \\tag{10}\n",
+    "\\text{Investment Universe} \\equiv \\text{ETFs ('Global World Economy')} \\tag{12}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Fama–French Three-Factor Model (Momentum, Value, Size)} \\tag{11}\n",
+    "\\text{Fama–French Three-Factor Model (Momentum, Value, Size)} \\tag{13}\n",
     "$$\n",
     "\n",
     "$$ \n",
-    "\\text{Public Data} \\tag{12}\n",
+    "\\text{Public Data} \\tag{14}\n",
     "$$\n",
     "\n",
     "### $ 1.3 \\; \\text{Performance Evaluation} $\n",
     "\n",
     "$$\n",
-    "\\text{The performance / risk profiles are sensitive to the target Beta and the market environment.} \\tag{13}\n",
+    "\\text{The performance / risk profiles are sensitive to the target Beta and the market environment.} \\tag{15}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Low Beta} \\Rightarrow \\text{Decorrelation;} \\tag{14}\n",
+    "\\text{Low Beta} \\Rightarrow \\text{Decorrelation;} \\tag{16}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{High Beta} \\equiv \\text{Antithesis.} \\tag{15}\n",
+    "\\text{High Beta} \\equiv \\text{Antithesis.} \\tag{17}\n",
     "$$\n",
     "\n",
     "<br>\n",
@@ -101,50 +101,50 @@
     "\\text{Portfolio Characteristics}:\n",
     "$$\n",
     "\n",
-    "- $$ \\text{Return}: \\mu \\tag{16} $$\n",
+    "- $$ \\text{Return}: \\mu \\tag{18} $$\n",
     "\n",
-    "- $$ \\text{Volatility (Vol)}: \\sigma \\tag{17} $$\n",
+    "- $$ \\text{Volatility (Vol)}: \\sigma \\tag{19} $$\n",
     "\n",
-    "- $$ \\text{Skewness (Skew)}: \\mathbb{E}\\left[\\left(\\frac{x - \\mu}{\\sigma}\\right)^3\\right] = \\frac{\\mu_3}{\\sigma^3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}} \\tag{18} $$\n",
+    "- $$ \\text{Skewness (Skew)}: \\mathbb{E}\\left[\\left(\\frac{x - \\mu}{\\sigma}\\right)^3\\right] = \\frac{\\mu_3}{\\sigma^3} = \\frac{\\kappa_3}{\\kappa_2^{3/2}} \\tag{20} $$\n",
     "\n",
-    "- $$ \\text{Value at Risk (VaR) / Expected Shortfall (ES)} \\tag{19} $$\n",
+    "- $$ \\text{Value at Risk (VaR) / Expected Shortfall (ES)} \\tag{21} $$\n",
     "\n",
-    "- $$ \\text{Sharpe Ratio}: \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}} \\tag{20} $$\n",
+    "- $$ \\text{Sharpe Ratio}: \\frac{\\mathbb{E}[R_a - R_b]}{\\sigma_a} = \\frac{\\mathbb{E}[R_a - R_b]}{\\sqrt{\\mathbb{V}(R_a - R_b)}} \\tag{22} $$\n",
     "\n",
     "### $1.4 \\; \\text{Simplification}$\n",
     "\n",
     "$$ \\text{Look-Back} \\; \\boldsymbol{\\mu} \\; \\text{Estimators}: $$\n",
     "\n",
-    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{21} $$\n",
+    "- $$ \\text{Long-Term Estimator (LTE)} : \\text{LT} \\Rightarrow \\text{LB} \\in \\{180 \\; \\text{Days}\\} \\tag{23} $$\n",
     "\n",
-    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{22} $$\n",
+    "- $$ \\text{Mid-Term Estimator (MTE)} : \\text{MT} \\Rightarrow \\text{LB} \\in \\{90 \\; \\text{Days}\\} \\tag{24} $$\n",
     "\n",
-    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{23} $$\n",
+    "- $$ \\text{Short-Term Estimator (STE)} : \\text{ST} \\Rightarrow \\text{LB} \\in \\{40 \\; \\text{Days}, 60 \\; \\text{Days}\\} \\tag{25} $$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. \\tag{24}\n",
+    "\\text{Term-Structure for Covariance} \\; \\boldsymbol{\\Sigma} \\; \\land \\; \\text{Expected Return} \\; \\boldsymbol{\\mu}. \\tag{26}\n",
     "$$\n",
     "\n",
     "### $ 1.5 \\; \\text{Synthesis} $\n",
     "\n",
     "$$\n",
-    "\\text{Optimal portfolio behavior constructed from}\n",
+    "\\text{Optimal portfolio behavior constructed from} \\tag{27}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{covariance and expected return estimators}\n",
+    "\\text{covariance and expected return estimators} \\tag{28}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{will vary due to strategic and market differences}.\n",
+    "\\text{will vary due to strategic and market differences}. \\tag{29}\n",
     "$$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{25}\n",
+    "S_{40}^{90} \\equiv \\boldsymbol{\\hat{\\Sigma}} \\Rightarrow \\text{40 Days} \\; \\land \\; \\boldsymbol{\\hat{\\mu}} \\Rightarrow \\text{90 Days} \\tag{30}\n",
     "$$\n",
     "\n",
     "<br>\n",
@@ -153,11 +153,11 @@
     "\\text{Objective}:\n",
     "$$\n",
     "\n",
-    "- $$ \\text{Evaluate Hypothesis} \\tag{26} $$\n",
+    "- $$ \\text{Evaluate Hypothesis} \\tag{31} $$\n",
     "\n",
-    "- $$ \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{27} $$\n",
+    "- $$ \\text{Demonstrate Robustness (Or Lack Thereof)} \\tag{32} $$\n",
     "\n",
-    "- $$ \\text{Market Regime Stratification} \\tag{28} $$"
+    "- $$ \\text{Market Regime Stratification} \\tag{33} $$"
    ]
   },
   {
