--- a/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
+++ b/FE630 - Final Project/fe630-fpr-md/fe630-fpr-jpm.ipynb
@@ -248,34 +248,34 @@
     "\n",
     "### $ 2.2 \\; \\text{Fama–French Three-Factor Model (FF3FM)} $\n",
     "\n",
-    "$ \\text{Definition}: $\n",
+    "$$ \\text{Definition}: \\tag{37}$$ \n",
     "\n",
     "$$\n",
-    "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i         \\tag{8}\n",
+    "r_i = r_f + \\beta_i^3(r_M - r_f) + b_i^s r_{\\text{SMB}} + b_i^v r_{\\text{HML}} + \\alpha_i + \\epsilon_i         \\tag{38}\n",
     "$$\n",
     "\n",
     "$ \\mathbb{E}[\\epsilon_i] = 0; \\, \\therefore $\n",
     "\n",
     "$$\n",
-    "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i         \\tag{9}\n",
+    "\\rho_i = r_f + \\beta_i^3 (\\rho_M - r_f) + b_i^s \\rho_{\\text{SMB}} + b_i^v \\rho_{\\text{HML}} + \\alpha_i         \\tag{39}\n",
     "$$\n",
     "\n",
     "<br>\n",
     "\n",
     "$$\n",
-    "\\text{Estimated Coefficient Vector}:\n",
+    "\\text{Estimated Coefficient Vector}: \\tag{40}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "(\\hat{\\beta}_i^3, \\hat{b}_i^s, \\hat{b}_i^v)^{\\intercal} \\Leftarrow y_i = \\rho_i - r_f        \\tag{10}\n",
+    "(\\hat{\\beta}_i^3, \\hat{b}_i^s, \\hat{b}_i^v)^{\\intercal} \\Leftarrow y_i = \\rho_i - r_f \\tag{41}        \n",
     "$$\n",
     "\n",
     "$$\n",
-    "\\text{Linear Regression}:\n",
+    "\\text{Linear Regression}: \\tag{42}\n",
     "$$\n",
     "\n",
     "$$\n",
-    "= \\hat{\\beta}_i^3 (\\rho_M - r_f) + \\hat{\\beta}_i^s r_{\\text{SMB}} + \\hat{b}_i^v \\rho_{\\text{HML}} + \\epsilon_i          \\tag{11}\n",
+    "= \\hat{\\beta}_i^3 (\\rho_M - r_f) + \\hat{\\beta}_i^s r_{\\text{SMB}} + \\hat{b}_i^v \\rho_{\\text{HML}} + \\epsilon_i \\tag{43}           \n",
     "$$\n",
     "\n",
     "$$\n",
@@ -283,7 +283,7 @@
     "$$\n",
     "\n",
     "$$\n",
-    "\\beta_i^m \\neq \\beta_i^3 \\mid \\text{estimated via separate regression / computed directly}.\n",
+    "\\beta_i^m \\neq \\beta_i^3 \\mid \\text{estimated via separate regression / computed directly}. \\tag{44}\n",
     "$$\n",
     "\n",
     "### 2.3 Executive Summary Formulation\n",
